--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "postinstall" : "cd client &&  yarn"
   }
 }
