--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-promise-router": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^3.4.0"
   },
@@ -17,6 +18,6 @@
     "client": "cd client && yarn start",
     "server": "node server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "postinstall" : "cd client &&  yarn"
+    "postinstall": "cd client &&  yarn"
   }
 }
